# note_taker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  example.env  main.py  pyproject.toml  schemas.py
app/: config.py  main.py
app/api/: notes.py  templates.py
app/database/: __init__.py  database_manager.py  mongo_manager.py
app/schemas/: __init__.py  base.py  notes.py  templates.py
app/utils/: logging.py  object_id.py
tests/: conftest.py  test_notes.py  test_template.py
