[tool.poetry]
name = "note_taker"
version = "0.1.0"
description = ""
authors = ["Alexander Babaren <sanya.fyl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
pytest = "^7.1.1"
motor = "^2.5.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
